--- a/Practice Problems/Practice Problems.csproj
+++ b/Practice Problems/Practice Problems.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantVariables.cs" />
+    <Compile Include="PalindromNumber.cs" />
+    <Compile Include="Pattern1.cs" />
+    <Compile Include="Pattern2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnly.cs" />
     <Compile Include="ReverseString.cs" />
   </ItemGroup>
   <ItemGroup>
