--- a/Practice Problems/Practice Problems.csproj
+++ b/Practice Problems/Practice Problems.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Pattern1.cs" />
     <Compile Include="Pattern2.cs" />
     <Compile Include="Pattern3.cs" />
+    <Compile Include="Pattern4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnly.cs" />
