--- a/Practice Problems/Practice Problems.csproj
+++ b/Practice Problems/Practice Problems.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Pattern3.cs" />
     <Compile Include="Pattern4.cs" />
     <Compile Include="Pattern5.cs" />
+    <Compile Include="Pattern6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnly.cs" />
